[tool.poetry]
name = "weechat-icat"
version = "0.1.0"
description = ""
authors = ["Trygve Aaberge <trygveaa@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "weechat_icat"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
